--- a/package.json
+++ b/package.json
@@ -1,12 +1,52 @@
 {
   "name": "employees",
   "private": true,
+  "version": "0.0.1",
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run",
+    "lint": "eslint ."
   },
   "dependencies": {
     "babel-runtime": "^6.20.0",
+    "eslint": "^3.18.0",
+    "faker": "^4.1.0",
+    "lodash": "^4.17.4",
     "meteor-node-stubs": "~0.2.4",
-    "react": "^15.4.2"
+    "react": "^15.4.2",
+    "react-addons-pure-render-mixin": "^15.4.2",
+    "react-dom": "^15.4.2"
+  },
+  "devDependencies": {
+    "babel-eslint": "^7.2.1",
+    "eslint": "^3.18.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-import-resolver-meteor": "^0.3.4",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-meteor": "^4.0.1",
+    "eslint-plugin-react": "^6.10.3"
+  },
+  "eslintConfig": {
+    "parser": "babel-eslint",
+    "parserOptions": {
+      "allowImportExportEverywhere": true
+    },
+    "plugins": [
+      "meteor"
+    ],
+    "extends": [
+      "airbnb",
+      "plugin:meteor/recommended"
+    ],
+    "settings": {
+      "import/resolver": "meteor"
+    },
+    "rules": {
+      "linebreak-style": "off",
+      "indent": "off",
+      "react/jsx-indent": "off",
+      "react/jsx-filename-extension": "off",
+      "arrow-body-style": 0
+    }
   }
 }
